# NanoTest

./: CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
Lib/: CMakeLists.txt  NanoTestAddTests.cmake  NanoTestDiscoverTests.cmake
Lib/NanoTest/: Main.cpp  NanoTest.cpp  NanoTest.h  NanoTestMacros.h  Printer.h  Registry.h  Types.h
Tests/: BasicTests.cpp  CMakeLists.txt  FunctionTests.cpp  FunctionTestsWithMain.cpp  LibTest.cpp
Tests/DummyLibraryUnderTest/: CMakeLists.txt  Lib.cpp  Lib.h
